--- a/index.html
+++ b/index.html
@@ -48,19 +48,39 @@
         <h2 class="visually-hidden">Features</h2>
         <ul class="about-list list">
             <li class="about-item">
-                <h3 class="about-title">Strategy</h3>
+            <div class="container-about">
+              <svg class="about-svg-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+               </svg>
+            </div >
+             <h3 class="about-title">Strategy</h3>
             <p class="about-pre-title">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="about-item">
+                <div class="container-about">
+              <svg class="about-svg-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+               </svg>
+            </div >
                 <h3 class="about-title">Punctuality</h3>
             <p class="about-pre-title">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="about-item">
+                <div class="container-about">
+              <svg class="about-svg-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+               </svg>
+            </div >
                 <h3 class="about-title">Diligence</h3>
             <p class="about-pre-title">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="about-item">
+                <div class="container-about">
+              <svg class="about-svg-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+               </svg>
+            </div >
                 <h3 class="about-title">Technologies</h3>
             <p class="about-pre-title">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
@@ -93,6 +113,29 @@
             <div class="team-name">
                 <h3 class="team-subject">Mark Guerrero</h3>
                 <p class="team-pre-title">Product Designer</p>
+                <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
+                </ul>
+    
             </div>
         </li>
         <li class="team-item">
@@ -100,6 +143,28 @@
             <div class="team-name">
                 <h3 class="team-subject">Tom Ford</h3>
                 <p class="team-pre-title">Frontend Developer</p>
+                 <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
+                </ul>
             </div>
         </li>
         <li class="team-item">
@@ -107,6 +172,28 @@
            <div class="team-name">
                 <h3 class="team-subject">Camila Garcia</h3>
                 <p class="team-pre-title">Marketing</p>
+                 <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
+                </ul>
            </div>
         </li>
         <li class="team-item">
@@ -114,10 +201,72 @@
             <div class="team-name">
                 <h3 class="team-subject">Daniel Wilson</h3>
                 <p class="team-pre-title">UI Designer</p>
+                 <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-soc-link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
+                </ul>
             </div>
         </li>
     </ul>
     </div>
+ </section>
+ <section class="Customers">
+    <div class="container">
+        <h2 class="customers-title">Customers</h2>
+    <ul class="customers-list list">      
+        <li class="customers-item">
+        <a href="" class="customers-link link">
+            <svg class="customers-svg" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo"></use>
+            </svg>
+        </a>
+        </li>
+        <li class="customers-item"> <a href="" class="customers-link link">
+            <svg class="customers-svg" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-1"></use>
+            </svg>
+        </a></li>
+        <li class="customers-item"> <a href="" class="customers-link link">
+            <svg class="customers-svg" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-2"></use>
+            </svg>
+        </a></li>
+        <li class="customers-item"> <a href="" class="customers-link link">
+            <svg class="customers-svg" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-3"></use>
+            </svg>
+        </a></li>
+        <li class="customers-item"> <a href="" class="customers-link link">
+            <svg class="customers-svg" width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-4"></use>
+            </svg>
+        </a></li>
+        <li class="customers-item"> <a href="" class="customers-link link">
+            <svg class="customers-svg"  width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-5"></use>
+            </svg>
+        </a></li>
+    </ul>
+     </dv >
+
  </section>
 </main>
  <footer class="footer">
