--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="container">
     <h2 class="team-title">Our Team</h2>
     <ul class="team-list list">
-        <li class="team-item">
+        <li class="team-item  shadow-team">
             <img src="./images/mark.jpg" alt="markguerrero" width="264">
             <div class="team-name">
                 <h3 class="team-subject">Mark Guerrero</h3>
@@ -138,7 +138,7 @@
     
             </div>
         </li>
-        <li class="team-item">
+        <li class="team-item shadow-team">
             <img src="./images/tom.jpg" alt="tomford" width="264">
             <div class="team-name">
                 <h3 class="team-subject">Tom Ford</h3>
@@ -167,7 +167,7 @@
                 </ul>
             </div>
         </li>
-        <li class="team-item">
+        <li class="team-item shadow-team">
             <img src="./images/camila.jpg" alt="camilagarcia" width="264">
            <div class="team-name">
                 <h3 class="team-subject">Camila Garcia</h3>
@@ -196,7 +196,7 @@
                 </ul>
            </div>
         </li>
-        <li class="team-item">
+        <li class="team-item shadow-team">
             <img src="./images/daniel.jpg" alt="danielwilson" width="264">
             <div class="team-name">
                 <h3 class="team-subject">Daniel Wilson</h3>
@@ -270,10 +270,37 @@
  </section>
 </main>
  <footer class="footer">
-    <div class="container">
-    <a class="footer-link link" href="./index.html"><span class="caption-pre">Web</span>Studio</a>
- <p class="footer-pre-title " >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
- </div>
+    <div class="foot-container container">
+   <div class="footer-logo">
+        <a class="footer-link link" href="./index.html"><span class="caption-pre">Web</span>Studio</a>
+     <p class="footer-pre-title " >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div >
+ <div class="footer-social">
+     <p class="footer-soc-text">Social media</p> 
+     <ul class="footer-soc list">
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a></li>
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+            </a></li>
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a></li>
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a></li>
+     </ul>
+ </di >
+</div>
  </footer>
 </body>
 </html>
