--- a/portfolio.html
+++ b/portfolio.html
@@ -47,63 +47,63 @@
 
     <h2 class="visually-hidden">properties</h2>
     <ul class="portfolio-list list">
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/bank.jpg" alt="interface" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Banking App Interface Concept</h3>
                  <p class="portfolio-pre-title">App</p>
              </div>
         </li>
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/payment.jpg" alt="cashless-payment" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Cashless Payment</h3>
                  <p class="portfolio-pre-title">Marketing</p>
              </div>
         </li>  
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/meditation.jpg" alt="meditaion-app" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Meditaion App</h3>
                  <p class="portfolio-pre-title">App</p>
              </div>
         </li>
-        <li class="portfolio-item"> 
+        <li class="portfolio-item portfolio-shadow"> 
              <img src="./images/taxi.jpg" alt="taxi-service" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Taxi Service</h3>
                  <p class="portfolio-pre-title">Marketing</p>
              </div>
         </li>
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/screen.jpg" alt="screen-illustrations" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Screen Illustrations</h3>
                  <p class="portfolio-pre-title">Design</p>
              </div>
         </li>
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/online.jpg" alt="online-courses" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Online Courses</h3>
                  <p class="portfolio-pre-title">Marketing</p>
              </div>
         </li>
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/instagram.jpg" alt="instagram-stories" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Instagram Stories Concept</h3>
                  <p class="portfolio-pre-title">Design</p>
              </div>
         </li>
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/organic.jpg" alt="organic-food" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Organic Food</h3>
                  <p class="portfolio-pre-title">Web Site</p>
              </div>
         </li>
-        <li class="portfolio-item">
+        <li class="portfolio-item portfolio-shadow">
              <img src="./images/coffee.jpg" alt="fresh-coffee" width="360">
              <div class="portfolio-item-text">
                  <h3  class="portfolio-title">Fresh Coffee</h3>
@@ -115,10 +115,37 @@
 </section>
 </main>
     <footer class="footer">
-    <div class="container">
-    <a class="footer-link link" href="./index.html"><span class="caption-pre">Web</span>Studio</a>
- <p class="footer-pre-title " >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
- </div>
+    <div class="foot-container container">
+   <div class="footer-logo">
+        <a class="footer-link link" href="./index.html"><span class="caption-pre">Web</span>Studio</a>
+     <p class="footer-pre-title " >Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div >
+ <div class="footer-social">
+     <p class="footer-soc-text">Social media</p> 
+     <ul class="footer-soc list">
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a></li>
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+            </a></li>
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a></li>
+        <li class="footer-item"><a href="" class="footer-link-soc link">
+                <svg class="footer-svg"  width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a></li>
+     </ul>
+ </di >
+</div>
  </footer>
     
 </body>
