--- a/portfolio.html
+++ b/portfolio.html
@@ -48,76 +48,76 @@
     <h2 class="visually-hidden">properties</h2>
     <ul class="portfolio-list list">
         <li class="portfolio-item ">
-            <a class="portfolio-card-link link" href="./portfolio.html"></a>
+            <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/bank.jpg" alt="interface" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Banking App Interface Concept</h3>
                  <p class="portfolio-pre-title">App</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item ">
-            <a class="portfolio-card-link link" href="./portfolio.html"></a>
+            <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/payment.jpg" alt="cashless-payment" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Cashless Payment</h3>
                  <p class="portfolio-pre-title">Marketing</p>
-             </div>
+             </div></a>
         </li>  
         <li class="portfolio-item ">
-            <a class="portfolio-card-link link" href="./portfolio.html"></a>
+            <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/meditation.jpg" alt="meditaion-app" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Meditaion App</h3>
                  <p class="portfolio-pre-title">App</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item "> 
-             <a class="portfolio-card-link link" href="./portfolio.html"></a>
+             <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/taxi.jpg" alt="taxi-service" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Taxi Service</h3>
                  <p class="portfolio-pre-title">Marketing</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item ">
-             <a class="portfolio-card-link link" href="./portfolio.html"></a>
+             <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/screen.jpg" alt="screen-illustrations" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Screen Illustrations</h3>
                  <p class="portfolio-pre-title">Design</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item ">
-             <a class="portfolio-card-link link" href="./portfolio.html"></a>
+             <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/online.jpg" alt="online-courses" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Online Courses</h3>
                  <p class="portfolio-pre-title">Marketing</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item ">
-             <a class="portfolio-card-link link" href="./portfolio.html"></a>
+             <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/instagram.jpg" alt="instagram-stories" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Instagram Stories Concept</h3>
                  <p class="portfolio-pre-title">Design</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item ">
-             <a class="portfolio-card-link link" href="./portfolio.html"></a>
+             <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/organic.jpg" alt="organic-food" width="360">
              <div class="portfolio-item-text">
                  <h3 class="portfolio-title" >Organic Food</h3>
                  <p class="portfolio-pre-title">Web Site</p>
-             </div>
+             </div></a>
         </li>
         <li class="portfolio-item ">
-             <a class="portfolio-card-link link" href="./portfolio.html"></a>
+             <a class="portfolio-card-link link" href="./portfolio.html">
              <img src="./images/coffee.jpg" alt="fresh-coffee" width="360">
              <div class="portfolio-item-text">
                  <h3  class="portfolio-title">Fresh Coffee</h3>
                  <p class="portfolio-pre-title">Web Site</p>
-             </div>
+             </div></a>
         </li>
     </ul>
     </div>
